--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "underscore": "1.6.0"
   },
   "devDependencies": {
+    "ember-template-compiler": "^1.6.1",
     "grunt": "^0.4.4",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.10.0",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-copy": "latest",
     "grunt-contrib-less": "latest",
-    "grunt-contrib-watch": "latest"
+    "grunt-contrib-watch": "latest",
+    "grunt-ember-templates": "^0.4.21",
+    "handlebars": "^1.3.0"
   }
 }
