--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "nw-demo",
   "main": "index.html",
+  "window": {
+    "title": "Carbon 3D",
+    "icon": "link.png",
+    "toolbar": true,
+    "width": 1000,
+    "height": 700,
+    "position": "mouse",
+    "min_width": 400,
+    "min_height": 250
+  },
   "dependencies": {
     "nino": "latest",
     "async": "0.9.0",
