--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "min_height": 250
   },
   "dependencies": {
-    "nino": "latest",
+    "nino": "0.1.2",
     "async": "0.9.0",
     "node-gyp": "0.13.1",
     "serialport": "1.4.2",
