--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "animo.js": "*",
     "jquery": "2.1.1",
     "ember": "1.6.1",
+    "underscore": "1.6.0",
     "bootstrap": "~3.2.0",
     "three.js": "*"
   },
