--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "underscore": "1.6.0",
     "bootstrap": "~3.2.0",
     "three.js": "*",
-    "d3": "3.4.11"
+    "d3": "latest",
+    "c3": "latest"
   },
   "resolutions": {
     "jquery": "2.1.1"
