--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "min_height": 250
   },
   "dependencies": {
-    "nino": "0.1.2",
     "async": "0.9.0",
     "node-gyp": "0.13.1",
     "serialport": "1.4.2",
@@ -28,6 +27,6 @@
     "grunt-contrib-less": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-ember-templates": "^0.4.21",
-    "handlebars": "^1.3.0"
+    "handlebars": "~1"
   }
 }
